# vMira

./: .gitignore  PLAN_ASSISTANT_PLATFORM.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
backend/: .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  docker-compose.prod.yml  docker-compose.yml  requirements.txt
backend-rust/: Cargo.toml  Dockerfile
backend-rust/.next/: trace  trace-build
backend-rust/migrations/: 001_initial.sql  002_usage.sql  003_billing.sql  004_attachments.sql  005_feedback.sql  006_notifications.sql  007_actions.sql  008_user_memory.sql  009_calendar.sql  010_briefing.sql  011_briefing_prompt.sql  012_projects.sql  013_overage_billing.sql  014_subscriptions.sql  015_project_enhancements.sql  016_organizations.sql  017_bridge.sql  018_team_workspaces.sql  019_telegram_auth.sql  020_extracted_content.sql  021_cleanup_indexes.sql  022_profile_settings.sql
backend-rust/src/: config.rs  db.rs  error.rs  main.rs  schema.rs
backend-rust/src/middleware/: auth.rs  hmac_verify.rs  mod.rs  request_id.rs
backend-rust/src/models/: action.rs  api_key.rs  attachment.rs  billing.rs  bridge.rs  conversation.rs  message.rs  mod.rs  notification.rs  organization.rs  project.rs  session.rs  usage.rs  user.rs
backend-rust/src/routes/: actions.rs  admin.rs  api_keys.rs  attachments.rs  auth.rs  billing.rs  bridge.rs  briefing.rs  calendar.rs  chat.rs  code.rs  completions.rs  device_auth.rs  feedback.rs  health.rs  live_data.rs  mod.rs  models.rs  notifications.rs  organizations.rs  projects.rs  quota.rs  sessions.rs  telegram.rs  voice.rs
backend-rust/src/services/: ai_proxy.rs  audit.rs  billing.rs  mod.rs  moderation.rs  payment.rs  payment_crypto.rs  payment_provider.rs  pii_scrub.rs  plans.rs  queue.rs  rate_limit.rs  refund.rs  sanitize.rs  scheduler.rs  search.rs  stock.rs  subscription.rs  telegram.rs  token.rs  token_revocation.rs  tts.rs  usage.rs  weather.rs  whisper.rs
backend-rust/whisper/: Dockerfile  docker-compose.whisper.yml  server.py
backend/alembic/: env.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/nginx/: nginx.conf
backend/scripts/: backup.sh  deploy.sh  seed_admin.py  setup-tls.sh  setup_clean.py  setup_db.py
docs/plans/: 2026-03-15-chatgpt-clone-design.md  2026-03-15-chatgpt-clone-plan.md  2026-03-18-rust-api-gateway-security-research.md  2026-04-03-bridge-session-backend.md  2026-04-03-organizations.md  2026-04-03-team-workspaces.md  2026-04-05-pipecat-voice-pipeline.md
docs/research/: 2026-04-05-voice-call-research.md
mira-datacenter/: voice-server.py
public/: llms.txt  pcm-processor.js
scripts/: pentest.py  pentest2.py  pentest3.py  pentest4_sota.py  pentest5_chat.py
src/: proxy.ts
src/app/: apple-icon.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: ActionCard.tsx  AuthModal.tsx  BriefingPage.tsx  ChatArea.tsx  CodeBlock.tsx  CodeModal.tsx  CodePage.tsx  EditReminderModal.tsx  ExternalLinkModal.tsx  FeedbackModal.tsx  HelpHeader.tsx  InputBar.tsx  LandingPage.tsx  LandingState.tsx  LegalLayout.tsx  MessageBubble.tsx  MessageReactions.tsx  MiraCodePricingModal.tsx  MiraHeading.tsx  ModelSelector.tsx  NewProjectModal.tsx  NotificationBell.tsx  OrgSettingsPage.tsx  PricingModal.tsx  ProjectsPage.tsx  ProtectedRoute.tsx  Providers.tsx  ReasoningBlock.tsx  ReminderCard.tsx  RemindersPage.tsx  ScheduledContentCard.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  SupportChat.tsx  TelegramLinkModal.tsx  ThinkingIndicator.tsx  TopBar.tsx  VoiceMode.tsx  VoiceRecording.tsx  (+1 more)
src/context/: AuthContext.tsx  ChatContext.tsx
src/hooks/: useLiveData.ts  useStreamingText.ts
src/lib/: api-billing.ts  api-chat.ts  api-client.ts  api-code.ts  (+6 more)
(+85 files in other folders)
